syntax = "proto3";

package mdm;

option go_package = "dvaxert.mdm.v1;mdmv1";

service Mdm {
  rpc DeviceRegister(DeviceRegisterRequest) returns (DeviceRegisterResponse);
  rpc DevicePing(DevicePingRequest) returns (DevicePingResponse);
  rpc DeviceState(DeviceStateRequest) returns (DeviceStateResponse);
}

message DeviceRegisterRequest {
  string device_id = 1;
}

message DeviceRegisterResponse {
  bool success = 1;
  optional string message = 2;
}

message DevicePingRequest {
  string device_id = 1;
}

message DevicePingResponse {
  bool state_changed = 1;
}

message DeviceStateRequest {
  string somedata = 1;
}

message DeviceStateResponse {
  string somedata = 1;
}
